feat: add Binder metadata

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# Finding the Higgs Boson\n",
-    "These data are taken from <doi:10.7483/OPENDATA.CMS.8FLU.UIQJ>, which uses simulations to reproduce the 2012 CMS data."
+    "These data are taken from <doi:10.7483/OPENDATA.CMS.8FLU.UIQJ>, which uses simulations to reproduce the 2012 CMS data.\n",
+    "![](xref:shared#note-launcher)"
    ]
   },
   {
